# lockdev-hippa-stack

./: .gitignore  CLAUDE.md  COST_ANALYSIS.md  COST_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  Makefile  QUICK_START.md  implementation.md  setup-github-secrets.sh
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
lockdev-hippa-app/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
lockdev-hippa-app/.github/workflows/: ci-cd.yml
lockdev-hippa-app/src/: __init__.py  main.py
lockdev-hippa-app/src/models/: audit_log.py  user.py
lockdev-hippa-app/src/routes/: api.py  health.py
lockdev-hippa-app/src/utils/: database.py  logging.py  security.py
lockdev-hippa-app/tests/: conftest.py  test_health.py
lockdev-hippa-iac/: .gitignore  Makefile  Pulumi.yaml  README-multi-account.md  README.md  __main__.py  deploy-infrastructure.sh  deploy-with-separation.sh  pyproject.toml  requirements.txt  setup-iam-separation.sh
lockdev-hippa-iac/.github/workflows/: infrastructure.yml
lockdev-hippa-iac/bootstrap/: deploy-bootstrap.sh  iam-bootstrap.yaml
lockdev-hippa-iac/configs/: accounts.yaml  dev.yaml  prod.yaml  test.yaml
lockdev-hippa-iac/iam-stack/: __main__.py
lockdev-hippa-iac/policies/: iam-manager-policy.json  infrastructure-policy.json
lockdev-hippa-iac/scripts/: cleanup-accounts.sh  multi-account-deploy.sh  setup-accounts.sh
lockdev-hippa-iac/src/: __init__.py  __main__.py  main_with_secrets.py
lockdev-hippa-iac/src/compute/: __init__.py  alb.py  ecs.py
lockdev-hippa-iac/src/database/: __init__.py  rds.py
lockdev-hippa-iac/src/monitoring/: __init__.py  cloudwatch.py
lockdev-hippa-iac/src/networking/: __init__.py  vpc.py
lockdev-hippa-iac/src/security/: __init__.py  cloudtrail.py  config.py  guardduty.py  iam.py  kms.py  secrets.py  security_groups.py
lockdev-hippa-iac/tests/: test_networking.py  test_security.py
