[tool.poetry]
name = "lockdev-hippa-app"
version = "0.1.0"
description = "HIPAA-compliant FastAPI application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
httpx = "^0.25.2"
aiosqlite = "^0.21.0"
setuptools = "^78.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.8"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
bandit = "^1.7.5"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Performance optimizations
incremental = true
cache_dir = ".mypy_cache"
fast_exit = true
# Skip checking installed packages for speed
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
cache-dir = ".ruff_cache"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"